--- a/client/QuickStartClient.csproj
+++ b/client/QuickStartClient.csproj
@@ -9,8 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Anthropic.SDK" Version="5.2.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+    <PackageReference Include="Anthropic.SDK">
+      <Version>5.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting">
+      <Version>9.0.6</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.3" />
   </ItemGroup>
 
